--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
+
 <html>
     <head>
-        <title></title>
+        <title>Site Of Music</title>
         <link rel-"stylesheet" href="style.css">
     </head>
     <body>
