--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Site Of Music</title>
-        <link rel-"stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
