--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Site Of Music</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel-"stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -43,7 +43,7 @@
            <p class="aia">Legal ⁃ Privacy ⁃ Cookie Policy ⁃ Cookie Manager
  ⁃ Imprint ⁃ Artist Resources ⁃ Blog ⁃ Charts ⁃
 Language: English (US)</p>
-           <img class="raz2" src="https://cdn.discordapp.com/attachments/1176839399229624320/1231189216428556308/en_badge_web_generic.png?ex=6624e9cf&is=6623984f&hm=948ffbdee9df75b7e7bcfaf299ab03e699ac3e911d4b006154efd299594dc1d4&" width="151" height="62">
+           <img class="raz2" src="https://cdn.discordapp.com/attachments/1176839399229624320/1231189216428556308/en_badge_web_generic.png?ex=6636b60f&is=6635648f&hm=2f3fd3f853f2939ed1f4a7eb70d0dba2de3bd80ada36e3af427318a4a6a2282d&" width="151" height="62">
            <img class="raz" src="https://cdn.discordapp.com/attachments/1176839399229624320/1231189216193417216/Download_on_the_App_Store_Badge.svg.png?ex=66360d4f&is=6623984f&hm=c99079b3cba3a2380ecdce457b8287bcbaca6474557269423df81ef00c669c93&" width="139" height="41">
            
         </footer>
