--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <header>
-            <img class="music" src="https://cdn.discordapp.com/attachments/1176839399229624320/1231171838537633893/music_notes_icon_126160.png?ex=6635fd20&is=66238820&hm=c1d298b65030dbada80484b63418a5e5cec2ccb7aad8a2794f931db72fd61c32&" width="100px" height="85px">
-            <img class="colocol" src="https://cdn.discordapp.com/attachments/1176839399229624320/1231174125020512266/1671731804_kartinkin-net-p-zvonochek-kartinka-instagram-1.png?ex=6635ff41&is=66238a41&hm=be8b040162e32c5f903fdf7be18e7a63d8442f696823729859a2230ea248377e&" width="60px" height="60px" >
+            <img class="music" src="https://ibb.co/k3wN4XZ" width="100px" height="85px">
+            <img class="colocol" src="https://ibb.co/vD7CdKg" width="60px" height="60px" >
             <nav class="menu">
                     <a href="">Home</a>
                     <a href="">Library</a>
