--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <html>
     <head>
         <title>Site Of Music</title>
@@ -7,8 +6,8 @@
     </head>
     <body>
         <header>
-            <img class="music" src="https://ibb.co/k3wN4XZ" width="100px" height="85px">
-            <img class="colocol" src="https://ibb.co/vD7CdKg" width="60px" height="60px" >
+            <img class="colocol" src="https://i.ibb.co/k3wN4XZ/1671731804-kartinkin-net-p-zvonochek-kartinka-instagram-1.png" alt="1671731804-kartinkin-net-p-zvonochek-kartinka-instagram-1" border="0" width="70px" height="70px">
+            <img class="music" src="https://i.ibb.co/vD7CdKg/music-notes-icon-126160.png" alt="music-notes-icon-126160" border="0" width="70px" height="70px">
             <nav class="menu">
                     <a href="">Home</a>
                     <a href="">Library</a>
