--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <html>
     <head>
         <title>Site Of Music</title>
@@ -25,15 +26,15 @@
             </nav></h2>
 
             <p>Popular Playlist </p>
-            <h6>2022 Top 10 most listened to tracks</h6>
+            <h6>is an EP by American thrash metal band Megadeth, which was released in 1995. This album contains songs that were previously recorded but were not included in the band's albums.</h6>
             <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/197982216&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
             <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/173057305&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
             <p>Instrumental 7</p>
-            <h6>7 years ago #neoclassical </h6>
+            <h6>Instrumental music can be surprisingly diverse and include many genres and styles.</h6>
             <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/246061834&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/280336089&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gabriel-ruata" title="Gabriel Ruata" target="_blank" style="color: #cccccc; text-decoration: none;">Gabriel Ruata</a> · <a href="https://soundcloud.com/gabriel-ruata/maia-432hz" title="Maia (432Hz)" target="_blank" style="color: #cccccc; text-decoration: none;">Maia (432Hz)</a></div>    
         <p>Introducing Buzzing</p>
-        <h6>22 days ago #drum & bass</h6>
+        <h6>Contemporary R&B: This is a musical style that has its origins in the rhythm and blues of the 1940s.</h6>
         <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1780168443&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         <iframe width="300px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1792947427&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </main>
